--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,15 @@ dependencies = [
     "sentry-sdk>=2.20.0",
 ]
 
+[tool.ruff]
+line-length = 88
+fix = true
+
 [tool.ruff.lint]
-select = ["E", "F", "I"]
-fixable = ["I"]
+select = ["I", "F", "E"]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+line-ending = "lf"
+
