ensure docker test runs on relevant changes

--- a/.github/workflows/docker_test.yml
+++ b/.github/workflows/docker_test.yml
@@ -4,9 +4,10 @@ on:
   pull_request:
     paths:
       - "**.py"
-      - "requirements.txt"
       - "Dockerfile"
-      - "crontab"
+      - "uv.lock"
+      - ".python-version"
+      - "pyproject.toml"
 
 jobs:
   build:
