--- a/.github/workflows/docker_test.yml
+++ b/.github/workflows/docker_test.yml
@@ -9,6 +9,9 @@ on:
       - ".python-version"
       - "pyproject.toml"
 
+permissions:
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
