--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "google-auth-httplib2>=0.2.0",
     "google-auth-oauthlib>=1.2.1",
     "gspread>=6.1.4",
-    "motor>=3.6.1",
+    "pymongo>=4.14.0",
     "python-dotenv>=1.0.1",
     "sentry-sdk>=2.20.0",
 ]
